Bug 122215 - [CSS Regions] Infinite loop when computing widows
Summary: [CSS Regions] Infinite loop when computing widows
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebCore Misc. (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords:
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2013-10-02 09:13 PDT by Andrei Bucur
Modified: 2013-10-04 01:48 PDT (History)
6 users (show)

See Also:


Attachments
Repro (1.15 KB, text/html)
2013-10-02 09:13 PDT, Andrei Bucur
no flags Details
Patch (11.43 KB, patch)
2013-10-03 10:49 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrei Bucur 2013-10-02 09:13:01 PDT
Created attachment 213167 [details]
Repro

Computing widows can generate an infinite loop in certain cases.
Comment 1 Mihai Balan 2013-10-03 01:03:07 PDT
I think it would be useful to have a brief description of at least one case where this happens.
Comment 2 Andrei Bucur 2013-10-03 10:49:12 PDT
Created attachment 213278 [details]
Patch
Comment 3 Dave Hyatt 2013-10-03 10:55:24 PDT
Comment on attachment 213278 [details]
Patch

r=me
Comment 4 WebKit Commit Bot 2013-10-04 01:47:58 PDT
Comment on attachment 213278 [details]
Patch

Clearing flags on attachment: 213278

Committed r156881: <http://trac.webkit.org/changeset/156881>
Comment 5 WebKit Commit Bot 2013-10-04 01:48:00 PDT
All reviewed patches have been landed.  Closing bug.